2007-01-25  Mike Crash <mike@mikecrash.com>

	* src/gnome-cmd-rename-dialog.c:
	Added GDK_KP_Enter handling

2007-01-14  Piotr Eljasiak  <epiotr@use.pl>

	* Makefile.am:
	* configure.in:
	* data/gnome-commander.spec.in:
	* m4/python.m4:
	* pixmaps/Makefile.am:
	* pixmaps/python-plugin.svg:
	* plugins/Makefile.am:
	* plugins/python/Makefile.am:
	* plugins/python/md5sum/Makefile.am:
	* plugins/python/md5sum/md5sum.py:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-con.c:
	* src/gnome-cmd-dir-pool.c:
	* src/gnome-cmd-file-popmenu.c:
	* src/gnome-cmd-python-plugin.c:
	* src/gnome-cmd-python-plugin.h:
	* src/main.c:
	* src/utils.c:
	Added support for python plugins

2007-01-14  Koos Jan Niesink  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file-selector.c:
	Fixed bug #371948 and #388970 (file path not escaped)

2007-01-10  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

2006-12-28  Mamoru Tasaka <mtasaka@ioa.s.u-tokyo.ac.jp>

	* data/gnome-commander.spec.in:
	Clean up

2006-12-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-list-popmenu.c:
	* src/gnome-cmd-main-win.c:
	Use GNOMEUIINFO_* helpers

2006-12-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-prepare-copy-dialog.c:
	* src/gnome-cmd-prepare-move-dialog.c:
	* src/gnome-cmd-xfer.c:
	* src/utils.c:
	Set default action to 'Replace' for overwriting confirmation dialog
	The dialog can be closed with ESC now

2006-12-18  Koos Jan Niesink  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file-list.c:
	Prevent gcmd from editing dirs

2006-12-18  Henry Yonathan <henry.yonathan@gmail.com>

	* src/gnome-cmd-main-win.c:
	Added shortcut CTRL+\ as 'Go to the root dir'
	Added shortcut CTRL+` as 'Go to the home dir'

2006-12-17  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	Use version requirements for rpm from configure.in

2006-12-17  Stephanos Manos <stefmanos@gmail.com>

	* data/gnome-commander.spec.in:
	Removed unnecessary .a libs from rpm